--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ecommerceserver",
   "version": "1.0.0",
   "description": "E-commerce server application",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node src/index.ts",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "seed": "ts-node src/seed.ts",
     "seed-new": "ts-node src/seedNewProducts.ts",
